# smart-contract-data

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CLONERS_GUIDE.md  DOWNLOAD_SCRIPTS_REFERENCE.md  EVMbench_AUDIT_CONVERSION_PLAN.md  PRD.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  SplitPlan.md  TASKS.md  download_all_data.py  package-lock.json  package.json  pyproject.toml  scraper.md  verify_setup.py
archive/: compass_artifact_wf-d7878642-d28e-43aa-9294-3fc7dcfb389f_text_markdown.md  dataSorucesReport.md
configs/automodel_b200/: README.md  budget.yaml  qwen25_coder_32b_qlora_sft.yaml  qwen25_coder_7b_fp8_smoke.yaml  qwen25_coder_7b_kd.yaml  qwen25_coder_7b_qlora_sft.yaml  trl_dpo_qwen25_coder_7b.yaml
crawlers/: requirements.txt  run_cloner.py  run_download_github.py  run_download_huggingface.py  run_download_kaggle.py  verify_setup.py
crawlers/cloners/: __init__.py  clone_aggregators.py  clone_all.py  clone_audits.py  clone_educational.py  clone_vulnerabilities.py  github_cloner.py
crawlers/config/: settings.py  sources.yaml
crawlers/downloaders/: __init__.py  hf_downloader.py  kaggle_downloader.py
crawlers/scrapers/: __init__.py  audit_scrapers.py  base_scraper.py  docs_scrapers.py  exploit_scrapers.py
crawlers/sources/: __init__.py  source_registry.py  source_types.py
modal_apps/: automodel_b200_post_training.py  unlimited_ocr_sglang.py
scripts/: automodel_b200_budget.py  automodel_prepare_datasets.py  ocr_modal_batch_smoke.py  ocr_modal_client.py  ocr_modal_materialize_pages.py  ocr_modal_run.py  ocr_modal_run_chunk.py  ocr_pdf_make_chunks.py  publish_to_huggingface.py  trl_dpo_train.py
tests/: conftest.py  test_automodel_post_training_tools.py  test_ocr_modal_materialize_pages.py  test_ocr_modal_run.py
(+36 files in other folders)
